// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Update User when user is admin should succeed 1`] = `
Object {
  "email": "milabgog@iz.ro",
  "id": "41a5bad8-9cb4-5881-b296-2eb316df862c",
  "name": "Theodore Roberson",
  "roles": Array [
    "user",
  ],
}
`;

exports[`Update User when user is admin when email is already taken should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "isEmailUnique": "User with this email already exists.",
      },
      "property": "email",
      "target": Object {
        "email": "huhur@cverkob.cy",
        "name": "Theodore Roberson",
        "password": "#(i9Z3OyGW",
      },
      "value": "huhur@cverkob.cy",
    },
  ],
  "statusCode": 400,
}
`;

exports[`Update User when user is admin when email is invalid should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "isEmail": "email must be an email",
      },
      "property": "email",
      "target": Object {
        "email": "foobar",
        "name": "Theodore Roberson",
        "password": "#(i9Z3OyGW",
      },
      "value": "foobar",
    },
  ],
  "statusCode": 400,
}
`;

exports[`Update User when user is admin when name is empty should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "isNotEmpty": "name should not be empty",
      },
      "property": "name",
      "target": Object {
        "email": "milabgog@iz.ro",
        "name": "",
        "password": "#(i9Z3OyGW",
      },
      "value": "",
    },
  ],
  "statusCode": 400,
}
`;

exports[`Update User when user is admin when password is too short should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "minLength": "password must be longer than or equal to 6 characters",
      },
      "property": "password",
      "target": Object {
        "email": "milabgog@iz.ro",
        "name": "Theodore Roberson",
        "password": "foo",
      },
      "value": "foo",
    },
  ],
  "statusCode": 400,
}
`;

exports[`Update User when user is not an admin should fail 1`] = `
Object {
  "error": "Forbidden",
  "message": "Forbidden resource",
  "statusCode": 403,
}
`;
